--- a/views/checkOut.ejs
+++ b/views/checkOut.ejs
@@ -1,22 +1,34 @@
 <%- include("partials/header",{title: "check out", category: menu}); %>
 <div class="container">
-    <h1>Check out</h1>
+    <h1 class="farTop farBottom">Check out</h1>
     <div class="checkOutOrder">
-        <% orderList.forEach(function(order){ %>
-            <div class="row">
-                <p class="col-10"><%= order.menuName %></p>
-                <p class="col-2 price"><%= order.price %></p>
-                <%  console.log(order)%>
-            </div>
-            <ul>
-                <% order.remark.forEach(function(remark){ %>
-                    <li><%= remark %></li>
+        <div class="container">
+            <div class="tableCheckOut farBottom">Table 8</div>
+            <div class="row justify-content-center">
+                <% orderList.forEach(function(order){ %>
+                    <div class=" col-11 col-md-9">
+                        <div class="row">
+                            <p class="col-9 bold"><%= order.menuName %></p>
+                            <p class="col-3 price bold"><%= order.price %></p>
+                            <%  console.log(order)%>
+                        </div>
+                        <ul>
+                            <% order.remark.forEach(function(remark){ %>
+                                <li><%= remark %></li>
+                            <% }); %>
+                        </ul>
+                    </div>
                 <% }); %>
-            </ul>
-        <% }); %>
+            </div>
+        </div>
     </div>
-    <div class="row justify-content-center">
-        <button class="btn col-md-9 col-12 confirmBtn checkOutBtn">check out</button>
+    <div class="replace"></div>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="row justify-content-center floatBtn">
+                <button class="btn col-md-9 col-11 confirm confirmBtn checkOutBtn">check out</button>
+            </div>
+        </div>
     </div>
 </div>
 <%- include("partials/footer", {active: "checkOut"}); %>
