--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,7 +8,7 @@
         <link href="/css/style.css" rel="stylesheet">
         <title><%= title %></title>
     </head>
-    <body>
+    <body class="floatBtnDiv">
         <div class="container">
         <nav class="navbar fixed-top navbar-default">
             <div class="container" >
