--- a/views/category.ejs
+++ b/views/category.ejs
@@ -15,7 +15,7 @@
             <% if(menu.category == category){ %>
                 <h1 class="farBottom farTop"><%= category %></h1>
                 <% menu.menuList.forEach(function(menuList){ %>
-                    <%- include("partials/menu",{ menu: menuList, category: category.category}) %>
+                    <%- include("partials/menu",{ menu: menuList, category: category}) %>
                 <% }); %>
             <% } %>
 
