--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -35,7 +35,7 @@
                                     <button class="btn searchBtn col-md-1 col-2" type="submit"><i class="bi bi-search"></i></button>
                                 </form>
                             </div>
-                            <div class="links">
+                            <div class="links farBottom">
                                 <li class="nav-item active">
                                     <a class="nav-link" href="/">All menu category</a>
                                 </li>
