--- a/views/kitchen.ejs
+++ b/views/kitchen.ejs
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
         <link href="/css/style.css" rel="stylesheet">
         <title>Kitchen UI</title>
     </head>
@@ -17,10 +18,13 @@
         <div class="container-md"></div>
             <!-- sort status -->
             <div class="container" style="text-align: right;">
-                <p class="sorter">sort by: 
+                <p class="sorter">
+                    <a class="sorter" href="/"><i class="fa fa-refresh" aria-hidden=""></i> refresh</a>
+                     |  
                     <a class="sorter" href="/resort" > 
-                        <% if(sort){ %>status <% }else{ %>date <% } %>
+                        sort by: <% if(sort){ %>status <% }else{ %>date <% } %>
                     </a>
+                    
                 </p>
             </div>
             <!-- dynamic order list -->
@@ -85,6 +89,12 @@
                     <%- include("partials/order",{ orderInfo: orderList });%>
                 <% }); %>
             <% } %>
+           
+        </div>
+        <div class="container">
+            <div class="row justify-content-center">
+                <a class="sorter" href="/" style="text-align: center;"><i class="fa fa-refresh" aria-hidden=""></i> refresh</a>
+            </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     </body>
