--- a/views/category.ejs
+++ b/views/category.ejs
@@ -4,11 +4,11 @@
 
     <div class="container">
         <!-- path -->
-        <a class="table" href="#">Table 8</a>
+        <a class="table" href="/">Table 8</a>
         <span class="table"> | </span>
-        <a class="path" href="/">Menu</a> 
+        <a class="path" href="/menu">Menu</a> 
         <span class="path"> > </span>
-        <a class="path" href="/<%= category %>"><%= category%></a>
+        <a class="path" href="/menu/<%= category %>"><%= category%></a>
     </div>
     <div class="row" >
         <% menu.forEach(function(menu){ %>
