--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,6 +4,7 @@
         padding: 4.5rem 0 4.5rem;
         min-height: 100%;
         min-width: 100%;
+        font-family: 'Kanit', sans-serif;
     }
     html{
         background-color: #438F68;
