--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,9 +2,9 @@
 <div class="container">
     <div class="container">
             <!-- path -->
-        <a class="table" href="#">Table 8</a>
+        <a class="table" href="/">Table 8</a>
         <span class="table"> | </span>
-        <a class="path" href="/">Menu</a> 
+        <a class="path" href="/menu">Menu</a> 
     </div>
     <div class="row" >
         <% var first = true %>
