--- a/views/kitchen.ejs
+++ b/views/kitchen.ejs
@@ -6,6 +6,12 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
         <link href="/css/style.css" rel="stylesheet">
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@200&display=swap" rel="stylesheet">
+
+
         <title>Kitchen UI</title>
     </head>
     <body>
@@ -19,9 +25,9 @@
             <!-- sort status -->
             <div class="container" style="text-align: right;">
                 <p class="sorter">
-                    <a class="sorter" href="/"><i class="fa fa-refresh" aria-hidden=""></i> refresh</a>
+                    <a class="sorter" href="/kitchen"><i class="fa fa-refresh" aria-hidden=""></i> refresh</a>
                      |  
-                    <a class="sorter" href="/resort" > 
+                    <a class="sorter" href="/kitchen/resort" > 
                         sort by: <% if(sort){ %>status <% }else{ %>date <% } %>
                     </a>
                     
@@ -93,7 +99,7 @@
         </div>
         <div class="container">
             <div class="row justify-content-center">
-                <a class="sorter" href="/" style="text-align: center;"><i class="fa fa-refresh" aria-hidden=""></i> refresh</a>
+                <a class="sorter" href="/kitchen" style="text-align: center;"><i class="fa fa-refresh" aria-hidden=""></i> refresh</a>
             </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
