--- a/views/menuInfo.ejs
+++ b/views/menuInfo.ejs
@@ -2,16 +2,16 @@
 <div class="container">
     <div class="container">
         <!-- path -->
-        <a class="table" href="#">Table 8</a>
+        <a class="table" href="/">Table 8</a>
         <span class="table"> | </span>
-        <a class="path" href="/">Menu</a> 
+        <a class="path" href="/menu">Menu</a> 
         <span class="path"> > </span>
-        <a class="path" href="/<%= category %>"><%= category %></a>
+        <a class="path" href="/menu/<%= category %>"><%= category %></a>
         <span class="path"> > </span>
-        <a class="path" href="/<%= menuName %>"><%= menuName %></a>
+        <a class="path" href="/menu/<%= category %>/<%= menuName %>"><%= menuName %></a>
     </div>
     <div class="row justify-content-center">
-        <img class="menuInfoImg col-12 col-md-9" src="../<%= imgSource %>" alt="<% menuName %>">
+        <img class="menuInfoImg col-12 col-md-9" src="../../<%= imgSource %>" alt="<% menuName %>">
     </div>
     <div class="container menuName row justify-content-center">
         <p class="col-8 col-md-6 "><%= menuName %></p>
