--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,6 +6,11 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
         <link href="/css/style.css" rel="stylesheet">
+        
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@200&display=swap" rel="stylesheet">
+
         <title><%= title %></title>
     </head>
     <body class="floatBtnDiv">
@@ -37,13 +42,13 @@
                             </div>
                             <div class="links farBottom">
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="/">All menu category</a>
+                                    <a class="nav-link" href="/menu">All menu category</a>
                                 </li>
                                 <% category.forEach(function(category){ %>
                                     <hr>
                                     <div class="container">
                                         <li class="nav-item active">
-                                            <a class="nav-link" href="/<%= category.category %>"><%= category.category %></a>
+                                            <a class="nav-link" href="/menu/<%= category.category %>"><%= category.category %></a>
                                         </li
                                     ></div>
                                 <% }); %>
