--- a/views/partials/order.ejs
+++ b/views/partials/order.ejs
@@ -7,7 +7,9 @@
                 <div class="row justify-content-center">
                     <div class="row col-md-10 col-xs-12" >
                         <h1 class="col-5 farBottom">Table <%= orderInfo.table %></h1>
-                        <p class="col-7" style="text-align: right;">status: <span class="<%= orderInfo.status %>"><%= orderInfo.status %></span></p>
+                        <p class="col-7" style="text-align: right;">status: 
+                            <span class="<%= orderInfo.status %>"><%= orderInfo.status %></span>
+                        </p>
                     </div>
                     <div class="row col-md-10 col-xs-12 justify-content-center">
                             <!-- order list -->
