Update confirm button

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -29,6 +29,8 @@
     }
     .replace{
         padding: 30px;
+        position: relative;
+        right: 80px;
     }
     .noMargin{
         margin: 0;
