--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,7 +17,7 @@
         <div class="container">
         <nav class="navbar fixed-top navbar-default">
             <div class="container" >
-                <a href="#">
+                <a href="/">
                     <h1 id="restaurantName">B&J restaurant</h1>
                 </a>
                 <!-- navigation bar toggle btn -->
