--- a/views/partials/menu.ejs
+++ b/views/partials/menu.ejs
@@ -2,7 +2,7 @@
     <a href="/menu/<%= category %>/<%= menu.menuName %>" class="menuName">
         <div class="menuItem rounded">
             <img class="menuImg  rounded-top" src="../<%= menu.imgSource %>" alt="<%= menu.menuName %>">
-            <p class="menuJustify imgText"><%= menu.price %></p>
+            <p class="menuJustify imgText"><%= menu.price+'฿' %></p>
             <div class="container row far">
                 <p class="noMargin"><%= menu.menuName %></p>
                 <hr class="menuSepp">         
