Edit welcome.css to change picture name

--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -2,7 +2,7 @@ body{
     background-color: #438F68;
 }
 .img{
-    background-image: url("/foodPic.jpeg");
+    background-image: url("/kaPao.jpeg");
     min-height: 500px;
     background-attachment: fixed;
     background-position: center;
