--- a/views/category.ejs
+++ b/views/category.ejs
@@ -1,25 +1,29 @@
 <!-- only category -->
 <%- include("partials/header",{title: category, category: menu}); %>
-<div class="container">
-
     <div class="container">
-        <!-- path -->
-        <a class="table" href="/">Table 8</a>
-        <span class="table"> | </span>
-        <a class="path" href="/menu">Menu</a> 
-        <span class="path"> > </span>
-        <a class="path" href="/menu/<%= category %>"><%= category%></a>
-    </div>
-    <div class="row" >
-        <% menu.forEach(function(menu){ %>
-            <% if(menu.category == category){ %>
-                <h1 class="farBottom farTop"><%= category %></h1>
-                <% menu.menuList.forEach(function(menuList){ %>
-                    <%- include("partials/menu",{ menu: menuList, category: category}) %>
-                <% }); %>
-            <% } %>
 
-        <% }); %>
+        <div class="container">
+            <!-- path -->
+            <a class="table" href="/">Table <%= table %></a>
+            <span class="table"> | </span>
+            <a class="path" href="/menu">Menu</a>
+            <span class="path"> > </span>
+            <a class="path" href="/menu/<%= category %>">
+                <%= category%>
+            </a>
+        </div>
+        <div class="row">
+            <% menu.forEach(function(menu){ %>
+                <% if(menu.category==category){ %>
+                    <h1 class="farBottom farTop">
+                        <%= category %>
+                    </h1>
+                    <% menu.menuList.forEach(function(menuList){ %>
+                        <%- include("partials/menu",{ menu: menuList, category: category}) %>
+                            <% }); %>
+                                <% } %>
+
+                                    <% }); %>
+        </div>
     </div>
-</div>
-<%- include("partials/footer", {active: "home"}); %>
+    <%- include("partials/footer", {active: "home" }); %>
