--- a/views/table.ejs
+++ b/views/table.ejs
@@ -1,56 +1,57 @@
-
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <link href="/css/welcome.css" rel="stylesheet">
 
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@200&display=swap" rel="stylesheet">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="/css/welcome.css" rel="stylesheet">
 
-        <title>Welcome!</title>
-    </head>
-    <body style="font-family: 'Kanit', sans-serif;">
-            <div class="img"></div>
-            <div class="img">
-                <div class="saiGua">
-                    <div class="sai">
-                        <div class="input">
-                            <form action="/" method="post">
-                                <h1 class="welcome">Welcome to B&J restaurant !</h1>
-                                <p class="welcome">select your table</p>
-                                    <!-- covid final -->
-                                <select class="" id="tableSelect" name="" required>
-                                    <option>---</option>
-                                    <option value="table1">table1</option>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@200&display=swap" rel="stylesheet">
+
+    <title>Welcome!</title>
+</head>
+
+<body style="font-family: 'Kanit', sans-serif;">
+    <div class="img"></div>
+    <div class="img">
+        <div class="saiGua">
+            <div class="sai">
+                <div class="input">
+                    <form action="/table" method="post">
+                        <h1 class="welcome">Welcome to B&J restaurant !</h1>
+                        <p class="welcome">select your table</p>
+                        <!-- covid final -->
+                        <select class="" id="tableSelect" name="table" required>
+                            <option>---</option>
+                            <!-- <option value="table1">table1</option>
                                     <option value="table2">table2</option>
-                                    <option value="table3">table3</option>
-                                    
-                                </select>
+                                    <option value="table3">table3</option> -->
 
-                                <!-- <select class="" id="tableSelect" name="tableSelect" required>
-                                    <option value="table1">table1</option>
-                                    <option value="table2">table2</option>
-                                    <option value="table3">table3</option>
-                                </select> -->
-                                <button class="btn" id="goBtn" type="submit">Go</button>
-                            </form>
-                        </div>
-                    </div>
+                        </select>
+
+                        <button class="btn" id="goBtn" type="submit">Go</button>
+                    </form>
                 </div>
             </div>
+        </div>
+    </div>
 
-        <script>
-            // var table = [];
-            // var tableSelect = document.getElementById("tableSelect");
-            // for (i = 0; i < 8; i++) {// << Max table N
-            //     tableSelect.options[tableSelect.options.length] = new Option("Table " + (i + 1), i + 1);
-            // }
-            
-        </script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    </body>
+    <script>
+        var table = [];
+        var tableSelect = document.getElementById("tableSelect");
+        for (i = 0; i < 8; i++) {// << Max table N
+            tableSelect.options[tableSelect.options.length] = new Option("Table " + (i + 1), i + 1);
+        }
+
+    </script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
